# websiteproject

./: .replit  app.py  contact.py  data.csv  data_loader.py  home.py  main.py  portfolio.py  pyproject.toml  requirements.txt
data/: data.csv  updated_loan.csv
templates/: airline.html  contact.html  home.html  index.html  main.html  portfolio.html  scooter.html
